syntax = "proto3";

package grpc.chatroom.server;

option java_multiple_files = true;

enum UserStatus {
  OFFLINE = 0;
  ONLINE = 1;
}

message User {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
}


message ChatMessage {
  string from = 1;
  string message = 2;
  uint32 likeCount = 3;
}

message Empty {}

message UserList {
  repeated User users = 1;
}

message JoinResponse {
  uint32 error = 1;
  string message = 2;
}

service ChatService {
  rpc join(User) returns (JoinResponse);
  rpc sendMessage(ChatMessage) returns (Empty);
  rpc receiveMessage(Empty) returns (ChatMessage);
  rpc getUsers(Empty) returns (UserList);
}
