syntax = "proto3";

package grpc.chatroom.server;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum UserStatus {
  OFFLINE = 0;
  ONLINE = 1;
}

message User {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
}


message ChatMessage {
  string from = 1;
  string message = 2;
  uint32 likeCount = 3;
}

message ChatMessageFromServer {
  google.protobuf.Timestamp timestamp = 1;
  ChatMessage message = 2;
}

message UserList {
  repeated User users = 1;
}

message JoinResponse {
  string message = 1;
}

service ChatService {
  rpc join(User) returns (JoinResponse);
  rpc getUsers(google.protobuf.Empty) returns (UserList);
  rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}
